link to package archives for Ubuntu desktop

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         </div>
       </div>
 
+      <ul>
+        <li>
+          <p>Application for your phone and touch is available from Ubuntu store.<p>
+        </li>
+        <li>
+          <p>Ubuntu packages for your desktop are available in repository <code>ppa:jlbarriere68/noson-app</code>. Go to <a href="https://launchpad.net/~jlbarriere68/+archive/ubuntu/noson-app">noson-app PPA</a> for technical details.</p>
+        </li>
+      </ul>
+
       <div class="row">
         <h2 align="center">Screenshot</h2>
         <div id="screenshot" align="center">
