add instructions to install from ppa

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
       <div class="row" style="text-align:left">
         <div class="span12">
-          <p>The fast and smart controller for your SONOS devices. You can browse your music library and play track or radio on any zones. You can manage queue and playlists and fully control the playback.</p>
+          <p>The fast and smart controller for your SONOS devices. You can browse your music library and play track or radio on any zones. You can manage grouping zones, queue, and playlists, and fully control the playback.</p>
           <p>Written with QML/C++ for maximal performance</p>
         </div>
         <div class="span12" style="text-align:center">
@@ -42,6 +42,12 @@
           <p>Ubuntu packages for your desktop are available in repository <code>ppa:jlbarriere68/noson-app</code>. Go to <a href="https://launchpad.net/~jlbarriere68/+archive/ubuntu/noson-app">noson-app PPA</a> for technical details.</p>
         </li>
       </ul>
+      <p>You can install noson-app on your Ubuntu desktop (from 15.10) by the following:
+        <pre>sudo add-apt-repository ppa:jlbarriere68/noson-app
+sudo apt-get update
+sudo apt-get install noson-app</pre>
+      </p>
+      <p>Sources code is hosted by <em>github</em> in repository <a href="https://github.com/janbar/noson-app/">noson-app</a>.</p>
 
       <div class="row">
         <h2 align="center">Screenshot</h2>
