add gitter badge

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ sudo apt-get install noson-app</pre>
       </p>
       <p>Sources code is hosted by <em>github</em> in repository <a href="https://github.com/janbar/noson-app/">noson-app</a>.</p>
 
+      <p>
+        <a href="https://gitter.im/janbar/noson-app?utm_source=share-link&utm_medium=link&utm_campaign=share-link">
+          <img alt="gitter chat" src="https://badges.gitter.im/janbar/noson-app.svg">
+        </a>
+      </p>
+
       <div class="row">
         <h2 align="center">Screenshot</h2>
         <div id="screenshot" align="center">
