--- a/index.html
+++ b/index.html
@@ -58,25 +58,7 @@ sudo apt-get install noson-app</pre>
       <div class="row">
         <h2 align="center">Screenshot</h2>
         <div id="screenshot" align="center">
-          <img src="download/noson_1_connect.png" style="width:200px;height:379px;">
-          <img src="download/noson_2_artist.png" style="width:200px;height:379px;">
-          <img src="download/noson_3_artistview.png" style="width:200px;height:379px;">
-          <img src="download/noson_4_album.png" style="width:200px;height:379px;">
-          <p></p>
-          <img src="download/noson_5_albumview.png" style="width:200px;height:379px;">
-          <img src="download/noson_6_genre.png" style="width:200px;height:379px;">
-          <img src="download/noson_7_genreview.png" style="width:200px;height:379px;">
-          <img src="download/noson_8_myradio.png" style="width:200px;height:379px;">
-          <p></p>
-          <img src="download/noson_9_playlist.png" style="width:200px;height:379px;">
-          <img src="download/noson_a_now.png" style="width:200px;height:379px;">
-          <img src="download/noson_b_nowqueue.png" style="width:200px;height:379px;">
-          <img src="download/noson_g_group.png" style="width:200px;height:379px;">
-          <p></p>
-          <img src="download/noson_c_managequeue.png" style="width:200px;height:379px;">
-          <img src="download/noson_d_zone.png" style="width:200px;height:379px;">
-          <img src="download/noson_e_setting.png" style="width:200px;height:379px;">
-          <img src="download/noson_f_standbytimer.png" style="width:200px;height:379px;">
+          <img src="download/noson.png"/>
         </div>
       </div>
     </div>
