add instructions to install SNAP package

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 sudo apt-get update
 sudo apt-get install noson-app</pre>
       </p>
+      <p>Alternatively a SNAP package is available from Ubuntu store. You can manually install it by the following:
+        <pre>sudo snap install noson</pre>
+      </p>
       <p>Sources code is hosted by <em>github</em> in repository <a href="https://github.com/janbar/noson-app/">noson-app</a>.</p>
 
       <p>
