--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="page-header">
           <img src="./icon.png" style="width: 120px; height: 120px; float: left; margin-right: 20px">
           <div id="blurb">
-            <p>Noson is a SONOS controller for Ubuntu platforms</p>
+            <p>Noson is a SONOS controller for Linux platforms</p>
           </div>
           <div style="clear:both;"></div>
         </div>
@@ -42,12 +42,12 @@
           <p>Ubuntu packages for your desktop are available in repository <code>ppa:jlbarriere68/noson-app</code>. Go to <a href="https://launchpad.net/~jlbarriere68/+archive/ubuntu/noson-app">noson-app PPA</a> for technical details.</p>
         </li>
       </ul>
-      <p>You can install noson-app on your Ubuntu desktop (from 15.10) by the following:
+      <p>You can install noson-app on your Ubuntu desktop by the following:
         <pre>sudo add-apt-repository ppa:jlbarriere68/noson-app
 sudo apt-get update
 sudo apt-get install noson-app</pre>
       </p>
-      <p>Alternatively a SNAP package is available from Ubuntu store. You can manually install it by the following:
+      <p>The latest version runs with Ubuntu 17.10 or later (Qt >= 5.9.1). Alternatively the older version of noson(2.4) is available from Ubuntu store as SNAP package. You can manually install it by the following:
         <pre>sudo snap install noson</pre>
       </p>
       <p>Sources code is hosted by <em>github</em> in repository <a href="https://github.com/janbar/noson-app/">noson-app</a>.</p>
