refactor index page

--- a/index.html
+++ b/index.html
@@ -36,20 +36,27 @@
 
       <ul>
         <li>
-          <p>Application for your phone and touch is available from Ubuntu store.<p>
-        </li>
-        <li>
+          <h4>Package for Ubuntu</h4>
           <p>Ubuntu packages for your desktop are available in repository <code>ppa:jlbarriere68/noson-app</code>. Go to <a href="https://launchpad.net/~jlbarriere68/+archive/ubuntu/noson-app">noson-app PPA</a> for technical details.</p>
-        </li>
-      </ul>
-      <p>You can install noson-app on your Ubuntu desktop by the following:
-        <pre>sudo add-apt-repository ppa:jlbarriere68/noson-app
+          <p>You can install noson-app on your Ubuntu desktop by the following:
+          <pre>sudo add-apt-repository ppa:jlbarriere68/noson-app
 sudo apt-get update
 sudo apt-get install noson-app</pre>
-      </p>
-      <p>The latest version runs with Ubuntu 17.10 or later (Qt >= 5.9.1). Alternatively the older version of noson(2.4) is available from Ubuntu store as SNAP package. You can manually install it by the following:
-        <pre>sudo snap install noson</pre>
-      </p>
+          </p>
+        </li>
+        <li>
+          <h4>Package Flatpak</h4>
+          <p>Noson is published in the <b>flathub</b> repository and it can be installed on any others Linux using flatpak. Go to <a href="https://flathub.org/apps/details/io.github.janbar.noson">noson in FlatHub</a> for further details.
+          </p>
+        </li>
+        <li>
+          <h4>Package Snap</h4>
+          <p>Alternatively the older version of noson(2.8) is available from Ubuntu store as SNAP package. You can manually install it by the following:
+          <pre>sudo snap install noson</pre>
+          </p>
+        </li>
+      </ul>
+
       <p>Sources code is hosted by <em>github</em> in repository <a href="https://github.com/janbar/noson-app/">noson-app</a>.</p>
 
       <p>
