add release notes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,25 @@ sudo apt-get install noson-app</pre>
           <img src="download/noson.png"/>
         </div>
       </div>
+
+      <br><br>
+
+      <div class="row">
+        <h2 align="center">Release notes</h2>
+        <ul>
+	  <li>
+	    <h4>Release 3.4.0</h4>
+	    The command line argument <code>--zone={Name of zone}</code> will connect the zone on startup.<br>
+	    The command line argument <code>--playurl={Stream URL}</code> will play the stream on startup.<br>
+            A setting <i>Theme</i> is added to switch the theme of colors: <i>Light</i> or <i>Dark</i> or <i>System default</i>. It is available only for the styles <i>Material</i> and <i>Universal</i>.<br>
+	  </li>
+	  <li>
+	    <h4>Release 3.3.8</h4>
+	    Bug fixing.<br>
+	  </li>
+        </ul>
+      </div>
+    
     </div>
 
     <footer>
