--- a/index.html
+++ b/index.html
@@ -77,16 +77,21 @@ sudo apt-get install noson-app</pre>
       <div class="row">
         <h2 align="center">Release notes</h2>
         <ul>
-	  <li>
-	    <h4>Release 3.4.0</h4>
-	    The command line argument <code>--zone={Name of zone}</code> will connect the zone on startup.<br>
-	    The command line argument <code>--playurl={Stream URL}</code> will play the stream on startup.<br>
+          <li>
+            <h4>Release 3.4.1</h4>
+            It includes a CLI tool available with the command <code>noson-app --cli</code>.<br>
+            Restart automatically the application when the setting style or scale has been changed.<br>
+          </li>
+          <li>
+            <h4>Release 3.4.0</h4>
+            The command line argument <code>--zone={Name of zone}</code> will connect the zone on startup.<br>
+            The command line argument <code>--playurl={Stream URL}</code> will play the stream on startup.<br>
             A setting <i>Theme</i> is added to switch the theme of colors: <i>Light</i> or <i>Dark</i> or <i>System default</i>. It is available only for the styles <i>Material</i> and <i>Universal</i>.<br>
-	  </li>
-	  <li>
-	    <h4>Release 3.3.8</h4>
-	    Bug fixing.<br>
-	  </li>
+          </li>
+          <li>
+            <h4>Release 3.3.8</h4>
+            Bug fixing.<br>
+          </li>
         </ul>
       </div>
     
