--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.4.3</h4>
+            Add new command CLI 'STATUS', 'SLEEPTIMER'.
+            Fix crash caused by the command CLI 'PLAYURL'.
+            Fix bug occurring with QtQuick 5.11.
+            Fix CMake build with Qt 5.11.
+          </li>
+          <li>
             <h4>Release 3.4.1</h4>
             It includes a CLI tool available with the command <code>noson-app --cli</code>.<br>
             Restart automatically the application when the setting style or scale has been changed.<br>
