fix release notes 3.4.3

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ sudo apt-get install noson-app</pre>
         <ul>
           <li>
             <h4>Release 3.4.3</h4>
-            Add new command CLI 'STATUS', 'SLEEPTIMER'.
-            Fix crash caused by the command CLI 'PLAYURL'.
-            Fix bug occurring with QtQuick 5.11.
-            Fix CMake build with Qt 5.11.
+            Add new command CLI 'STATUS', 'SLEEPTIMER'.<br>
+            Fix crash caused by the command CLI 'PLAYURL'.<br>
+            Fix bug occurring with QtQuick 5.11.<br>
+            Fix CMake build with Qt 5.11.<br>
           </li>
           <li>
             <h4>Release 3.4.1</h4>
