--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.5.0</h4>
+            Add support for enabling/disabling night mode.<br>
+          </li>
+          <li>
             <h4>Release 3.4.3</h4>
             Add new command CLI 'STATUS', 'SLEEPTIMER'.<br>
             Fix crash caused by the command CLI 'PLAYURL'.<br>
