--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.6.0</h4>
+            Add support to manage alarm clock.<br>
+            Add new command CLI 'SHOWAC', 'CREATEAC', 'UPDATEAC', 'DESTROYAC'.<br>
+          </li>
+          <li>
             <h4>Release 3.5.0</h4>
             Add support for enabling/disabling night mode.<br>
           </li>
