--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.6.3</h4>
+            Display share indexing in progress.<br>
+            Fix remaining time of sleeptimer not refreshed.<br>
+            Fix search state not cleaned.<br>
+          </li>
+          <li>
             <h4>Release 3.6.0</h4>
             Add support to manage alarm clock.<br>
             Add new command CLI 'SHOWAC', 'CREATEAC', 'UPDATEAC', 'DESTROYAC'.<br>
