--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.6.4</h4>
+            Add german translations from transifex.<br>
+          </li>
+          <li>
             <h4>Release 3.6.3</h4>
             Display share indexing in progress.<br>
             Fix remaining time of sleeptimer not refreshed.<br>
