--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.6.5</h4>
+            Improve touching areas for phone device.<br>
+            Build Android (Native API level 16).<br>
+          </li>
+          <li>
             <h4>Release 3.6.4</h4>
             Add german translations from transifex.<br>
           </li>
