--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@ sudo apt-get install noson-app</pre>
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
+            <h4>Release 3.7.0</h4>
+            Fast startup: No more loading the full music index at startup.<br>
+            The new space 'My Music' allows to browse the music index.<br>
+            Adds a new folder to browse music by composer.<br>
+            Improvements for mobile devices.<br>
+          </li>
+          <li>
             <h4>Release 3.6.5</h4>
             Improve touching areas for phone device.<br>
             Build Android (Native API level 16).<br>
