add section 'usage'

--- a/index.html
+++ b/index.html
@@ -75,6 +75,30 @@ sudo apt-get install noson-app</pre>
       <br><br>
 
       <div class="row">
+        <h2 align="center">Usage (Linux,BSD)</h2>
+        <ul>
+          <li>
+            <h4>--cli</h4>
+            It launches the CLI tool for DIYers: Type 'help' to show all available commands.<br>
+          </li>
+          <li>
+            <h4>--zone={Name of zone}</h4>
+            It will connect the specified zone at GUI startup.<br>
+          </li>
+          <li>
+            <h4>--playurl={Stream URL}</h4>
+            It will play the stream at GUI startup.<br>
+          </li>
+          <li>
+            <h4>--debug</h4>
+            Enable debug output.<br>
+          </li>
+        </ul>
+      </div>
+
+      <br><br>
+
+      <div class="row">
         <h2 align="center">Release notes</h2>
         <ul>
           <li>
