--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
           <h2 align="center">Release notes</h2>
           <ul>
             <li>
+              <h4>Release 3.7.4</h4>
+              Fix registration issue for some third part services: 'Amazon Music' and more.<br>
+              Improve command output.<br>
+            </li>
+            <li>
               <h4>Release 3.7.0</h4>
               Fast startup: No more loading the full music index at startup.<br>
               The new space 'My Music' allows to browse the music index.<br>
