--- a/index.html
+++ b/index.html
@@ -86,91 +86,95 @@
         <br><br>
 
         <div class="row">
-          <h2 align="center">Usage (Linux,BSD)</h2>
-          <ul>
-            <li>
-              <h4>--cli</h4>
-              It launches the CLI tool for DIYers: Type 'help' to show all available commands.<br>
-            </li>
-            <li>
-              <h4>--zone={Name of zone}</h4>
-              It will connect the specified zone at GUI startup.<br>
-            </li>
-            <li>
-              <h4>--playurl={Stream URL}</h4>
-              It will play the stream at GUI startup.<br>
-            </li>
-            <li>
-              <h4>--debug</h4>
-              Enable debug output.<br>
-            </li>
-          </ul>
+          <div class="span12">
+            <h2 align="center">Usage (Linux,BSD)</h2>
+            <ul>
+              <li>
+                <h4>--cli</h4>
+                It launches the CLI tool for DIYers: Type 'help' to show all available commands.<br>
+              </li>
+              <li>
+                <h4>--zone={Name of zone}</h4>
+                It will connect the specified zone at GUI startup.<br>
+              </li>
+              <li>
+                <h4>--playurl={Stream URL}</h4>
+                It will play the stream at GUI startup.<br>
+              </li>
+              <li>
+                <h4>--debug</h4>
+                Enable debug output.<br>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <br><br>
 
         <div class="row">
-          <h2 align="center">Release notes</h2>
-          <ul>
-            <li>
-              <h4>Release 3.7.4</h4>
-              Fix registration issue for some third part services: 'Amazon Music' and more.<br>
-              Improve command output.<br>
-            </li>
-            <li>
-              <h4>Release 3.7.0</h4>
-              Fast startup: No more loading the full music index at startup.<br>
-              The new space 'My Music' allows to browse the music index.<br>
-              Adds a new folder to browse music by composer.<br>
-              Improvements for mobile devices.<br>
-            </li>
-            <li>
-              <h4>Release 3.6.5</h4>
-              Improve touching areas for phone device.<br>
-              Build Android (Native API level 16).<br>
-            </li>
-            <li>
-              <h4>Release 3.6.4</h4>
-              Add german translations from transifex.<br>
-            </li>
-            <li>
-              <h4>Release 3.6.3</h4>
-              Display share indexing in progress.<br>
-              Fix remaining time of sleeptimer not refreshed.<br>
-              Fix search state not cleaned.<br>
-            </li>
-            <li>
-              <h4>Release 3.6.0</h4>
-              Add support to manage alarm clock.<br>
-              Add new command CLI 'SHOWAC', 'CREATEAC', 'UPDATEAC', 'DESTROYAC'.<br>
-            </li>
-            <li>
-              <h4>Release 3.5.0</h4>
-              Add support for enabling/disabling night mode.<br>
-            </li>
-            <li>
-              <h4>Release 3.4.3</h4>
-              Add new command CLI 'STATUS', 'SLEEPTIMER'.<br>
-              Fix crash caused by the command CLI 'PLAYURL'.<br>
-              Fix bug occurring with QtQuick 5.11.<br>
-              Fix CMake build with Qt 5.11.<br>
-            </li>
-            <li>
-              <h4>Release 3.4.1</h4>
-              It includes a CLI tool available with the command <code>noson-app --cli</code>.<br>
-              Restart automatically the application when the setting style or scale has been changed.<br>
-            </li>
-            <li>
-              <h4>Release 3.4.0</h4>
-              The command line argument <code>--zone={Name of zone}</code> will connect the zone on startup.<br>
-              The command line argument <code>--playurl={Stream URL}</code> will play the stream on startup.<br>
-              A setting <i>Theme</i> is added to switch the theme of colors: <i>Light</i> or <i>Dark</i> or <i>System default</i>. It is available only for the styles <i>Material</i> and <i>Universal</i>.<br>
-            </li>
-            <li>
-              <h4>Release 3.3.8</h4>
-              Bug fixing.<br>
-            </li>
-          </ul>
+          <div class="span12">
+            <h2 align="center">Release notes</h2>
+            <ul>
+              <li>
+                <h4>Release 3.7.4</h4>
+                Fix registration issue for some third part services: 'Amazon Music' and more.<br>
+                Improve command output.<br>
+              </li>
+              <li>
+                <h4>Release 3.7.0</h4>
+                Fast startup: No more loading the full music index at startup.<br>
+                The new space 'My Music' allows to browse the music index.<br>
+                Adds a new folder to browse music by composer.<br>
+                Improvements for mobile devices.<br>
+              </li>
+              <li>
+                <h4>Release 3.6.5</h4>
+                Improve touching areas for phone device.<br>
+                Build Android (Native API level 16).<br>
+              </li>
+              <li>
+                <h4>Release 3.6.4</h4>
+                Add german translations from transifex.<br>
+              </li>
+              <li>
+                <h4>Release 3.6.3</h4>
+                Display share indexing in progress.<br>
+                Fix remaining time of sleeptimer not refreshed.<br>
+                Fix search state not cleaned.<br>
+              </li>
+              <li>
+                <h4>Release 3.6.0</h4>
+                Add support to manage alarm clock.<br>
+                Add new command CLI 'SHOWAC', 'CREATEAC', 'UPDATEAC', 'DESTROYAC'.<br>
+              </li>
+              <li>
+                <h4>Release 3.5.0</h4>
+                Add support for enabling/disabling night mode.<br>
+              </li>
+              <li>
+                <h4>Release 3.4.3</h4>
+                Add new command CLI 'STATUS', 'SLEEPTIMER'.<br>
+                Fix crash caused by the command CLI 'PLAYURL'.<br>
+                Fix bug occurring with QtQuick 5.11.<br>
+                Fix CMake build with Qt 5.11.<br>
+              </li>
+              <li>
+                <h4>Release 3.4.1</h4>
+                It includes a CLI tool available with the command <code>noson-app --cli</code>.<br>
+                Restart automatically the application when the setting style or scale has been changed.<br>
+              </li>
+              <li>
+                <h4>Release 3.4.0</h4>
+                The command line argument <code>--zone={Name of zone}</code> will connect the zone on startup.<br>
+                The command line argument <code>--playurl={Stream URL}</code> will play the stream on startup.<br>
+                A setting <i>Theme</i> is added to switch the theme of colors: <i>Light</i> or <i>Dark</i> or <i>System default</i>. It is available only for the styles <i>Material</i> and <i>Universal</i>.<br>
+              </li>
+              <li>
+                <h4>Release 3.3.8</h4>
+                Bug fixing.<br>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
