--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 3.8.0</h4>
+                Include a thumbnailer to download artist/album arts from Last.fm. To enable this functionality
+                you have to setup your API key supplied by Last.fm<br>
+                Refactor the fallback cover.<br>
+              </li>
+              <li>
                 <h4>Release 3.7.4</h4>
                 Fix registration issue for some third part services: 'Amazon Music' and more.<br>
                 Improve command output.<br>
