--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <li>
                 <h4>Release 3.8.0</h4>
                 Include a thumbnailer to download artist/album arts from Last.fm. To enable this functionality
-                you have to setup your API key supplied by Last.fm<br>
+                you have to setup your API key supplied by Last.fm.<br>
                 Refactor the fallback cover.<br>
               </li>
               <li>
