--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </li>
           <li>
             <h4>Package Snap</h4>
-            <p>Alternatively the older version of noson(2.8) is available from Ubuntu store as SNAP package. You can manually install it by the following:
+            <p>Alternatively Noson is available from Ubuntu store as SNAP package. You can manually install it by the following:
             <pre>sudo snap install noson</pre>
             </p>
           </li>
@@ -115,6 +115,12 @@
           <div class="span12">
             <h2 align="center">Release notes</h2>
             <ul>
+              <li>
+                <h4>Release 3.9.3</h4>
+                New sound settings screen.<br>
+                Allow malformed xml from service providers.<br>
+                Fix SNI issue with OpenSSL.<br>
+              </li>
               <li>
                 <h4>Release 3.8.0</h4>
                 Include a thumbnailer to download artist/album arts from Last.fm. To enable this functionality
