--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 3.10.4</h4>
+                You can stream output of a Linux/BSD desktop to Sonos. (Requires PulseAudio)<br>
+                It shows the current stream content or radio show.<br>
+              </li>
+              <li>
                 <h4>Release 3.9.3</h4>
                 New sound settings screen.<br>
                 Allow malformed xml from service providers.<br>
