--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 3.11.0</h4>
+                You can stream your local audio files. Supported formats are FLAC, MP3 and AAC.<br>
+                Noson extracts Vorbis-comments and ID3 tags including artworks and shares them with
+                your Sonos devices for the best user experience.<br>
+              </li>
+              <li>
                 <h4>Release 3.10.4</h4>
                 You can stream output of a Linux/BSD desktop to Sonos. (Requires PulseAudio)<br>
                 It shows the current stream content or radio show.<br>
