--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 3.13.0</h4>
+                Fetch thumbnails from DEEZER by default. The LastFM client remains available by filling
+                in the API key from the settings dialog.
+              </li>
+              <li>
                 <h4>Release 3.11.0</h4>
                 You can stream your local audio files. Supported formats are FLAC, MP3 and AAC.<br>
                 Noson extracts Vorbis-comments and ID3 tags including artworks and shares them with
