--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 3.14.5</h4>
+                Add support to stream OGG audio files.
+                Fix the language string passed to services (The issue occured with Spotify).
+              </li>
+              <li>
                 <h4>Release 3.13.0</h4>
                 Fetch thumbnails from DEEZER by default. The LastFM client remains available by filling
                 in the API key from the settings dialog.
