update release note

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <ul>
               <li>
                 <h4>Release 3.14.5</h4>
-                Add support to stream OGG audio files.
+                Add support to stream OGG audio files.<br>
                 Fix the language string passed to services (The issue occured with Spotify).
               </li>
               <li>
