--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 3.15.2</h4>
+                Enable loudness switch.
+                Fix registration issue with services don't handle token refreshing (PocketCasts). 
+                Fix for british users using Spotify (Locale en-GB isn't supported by the latest Spotify API).
+              </li>
+              <li>
                 <h4>Release 3.14.5</h4>
                 Add support to stream OGG audio files.<br>
                 Fix the language string passed to services (The issue occured with Spotify).
