--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <ul>
               <li>
                 <h4>Release 3.15.2</h4>
-                Enable loudness switch.
-                Fix registration issue with services don't handle token refreshing (PocketCasts). 
+                Enable loudness switch.<br>
+                Fix registration issue with services don't handle token refreshing (PocketCasts).<br>
                 Fix for british users using Spotify (Locale en-GB isn't supported by the latest Spotify API).
               </li>
               <li>
