--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 4.0.1</h4>
+                Handles events for all players of the zone at startup.<br>
+                It allows playing/stopping playback without having to change the player, and it displays all the states.<br>
+                Major design improvements.<br>
+              </li>
+              <li>
                 <h4>Release 3.16.0</h4>
                 Supports the MPRIS2 interface.<br>
                 Fix missing search categories for the services without presentation map (Spotify API).<br>
