--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 4.4.1</h4>
+                New setting to configure an additional music location other than the standard XDG.<br>
+              </li>             
+              <li>
                 <h4>Release 4.0.1</h4>
                 Handles events for all players of the zone at startup.<br>
                 It allows playing/stopping playback without having to change the player, and it displays all the states.<br>
