--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             </p>
           </li>
           <li>
+            <h4>Package for Gentoo</h4>
+            <p>Gentoo packages are available in the GURU overlay</p>
+          </li>
+          <li>
             <h4>Package Flatpak</h4>
             <p>Noson is published in the <b>flathub</b> repository and it can be installed on any others Linux using flatpak. Go to <a href="https://flathub.org/apps/details/io.github.janbar.noson">noson in FlatHub</a> for further details.
             </p>
