--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 4.5.0</h4>
+                Create dedicated ports for Qt 5.15 (controls2_515) and Qt 5.12 (controls_509). The project select the right port depending of installed Qt framework.<br>
+              </li>
+              <li>
                 <h4>Release 4.4.1</h4>
                 New setting to configure an additional music location other than the standard XDG.<br>
               </li>             
