update latest release 5.0

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </p>
           </li>
           <li>
-            <h4>Package Snap</h4>
-            <p>Alternatively Noson is available from Ubuntu store as SNAP package.
+            <h4>AppImage</h4>
+            <p>Noson is available as AppImage. Go to the <a href="https://github.com/janbar/noson-app/releases">releases section</a> and check assets in the latest release.
             </p>
           </li>
         </ul>
@@ -126,6 +126,12 @@
           <div class="span12">
             <h2 align="center">Release notes</h2>
             <ul>
+              <li>
+                <h4>Release 5.0.0</h4>
+                Refactoring the music index page.<br>
+                Fix pulseaudio issues.<br>
+                WARNING: I will no longer maintain the SNAP package (pulseaudio broken). Please use the AppImage or Flathub package instead.<br>
+              </li>
               <li>
                 <h4>Release 4.5.0</h4>
                 Create dedicated ports for Qt 5.15 (controls2_515) and Qt 5.12 (controls_509). The project select the right port depending of installed Qt framework.<br>
