--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
             <h2 align="center">Release notes</h2>
             <ul>
               <li>
+                <h4>Release 5.2.0</h4>
+                Restore cover and metadata of current playing on wide aspect view.<br>
+                Allow to seek next in a flow.<br>
+                Fix MPRIS actions.<br>
+                Use global design for all sections, including "This Device", "Playlists", "My Index".<br>
+                Introduce the global search in "My Index" by Artist, Composer, Album, Genre, or title.<br>
+              </li>
+              <li>
                 <h4>Release 5.0.0</h4>
                 Refactoring the music index page.<br>
                 Fix pulseaudio issues.<br>
